@@ -325,6 +325,9 @@ details.'''
         '--no-auto-control', dest='auto_control', action='store_false',
         default=True,
         help='Disable automatic test generation with autodep8')
+    g_misc.add_argument('--build-parallel', metavar='N',
+                        help='Set "parallel=N" DEB_BUILD_OPTION for building '
+                        'packages (default: number of available processors)')
     g_misc.add_argument(
         '-h', '--help', action='help', default=argparse.SUPPRESS,
         help='show this help message and exit')
