@@ -4,6 +4,11 @@ autopkgtest (3.20.4) UNRELEASED; urgency=medium
     precise/armhf, which does not yet have linux-headers-generic.
   * Use "nproc" to determine the number of processors available, which is both
     more correct in a cgroup world, and also simpler.
+  * Add new --build-parallel=N option to explicitly set the "parallel=N"
+    $DEB_BUILD_OPTION for building packages, to override the default of
+    "number of available CPUs". This is mostly useful in containers where you
+    can restrict the available RAM, but not restrict the number of CPUs.
+    (LP: #1569750)
 
  -- Martin Pitt <mpitt@debian.org>  Tue, 12 Apr 2016 21:08:10 +0200
 
